# ex3_Jenny_Yael_01

./: .gitignore  Assignment.cpp  Assignment.h  CMakeLists.txt  Command.h  ConnectControlClientCommand.cpp  ConnectControlClientCommand.h  IfCommand.cpp  IfCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  Print.cpp  Print.h  README.md  Sim.cpp  Sim.h  Sleep.cpp  Sleep.h  WhileCommand.cpp  WhileCommand.h  ex1.cpp  ex1.h  fly.txt  interpreter.cpp  interpreter.h  main.cpp  testFile.txt  xml.cpp  xml.h
